# simploxide

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  autobinder.sh  autoupdater.sh  bindgen.sh  lint.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: maintainer.yml  rust.yml
simploxide/: Cargo.toml  README.md
simploxide-api-types/: Cargo.toml  README.md
simploxide-api-types/src/: client_api.rs  commands.rs  errors.rs  events.rs  lib.rs  responses.rs  utils.rs
simploxide-bindgen/: Cargo.toml  README.md  bindffi.sh
simploxide-bindgen/src/: commands.rs  events.rs  lib.rs  main.rs  parse_utils.rs
simploxide-bindgen/src/syntax/: binding.rs  mod.rs
simploxide-bindgen/src/types/: discriminated_union_type.rs  enum_type.rs  mod.rs  record_type.rs
simploxide-client/: Cargo.toml  README.md
simploxide-client/examples/: dialogue_bot.rs  file_bot.rs  multimedia_bot.rs  remote_control.rs  squaring_bot.rs  support_bots.rs
simploxide-client/src/: bot.rs  dispatcher.rs  ext.rs  ffi.rs  id.rs  lib.rs  messages.rs  prelude.rs  preview.rs  remote.rs  util.rs  ws.rs  xftp.rs
simploxide-client/src/bot/: mod.rs
simploxide-client/src/bot/farm/: demux.rs  mod.rs  mux.rs
simploxide-client/src/crypto/: mod.rs  native.rs
simploxide-client/src/crypto/fs/: mod.rs  std.rs  tokio.rs
simploxide-core/: Cargo.toml  README.md
simploxide-core/docs/: graceful_shutdown.d2  ws_error.d2
simploxide-core/src/: dispatcher.rs  lib.rs  router.rs  transmission.rs
simploxide-ffi-core/: Cargo.toml  README.md  sxcrt
simploxide-ffi-core/src/: default.rs  lib.rs  worker.rs
simploxide-ffi-core/tests/: smoke.rs
simploxide-sxcrt-sys/: .gitignore  Cargo.toml  README.md  build.rs
simploxide-sxcrt-sys/simplex-static/: Makefile  bundle.sh  cabal.project  collect-ghc-libs.sh
simploxide-sxcrt-sys/src/: bindings.rs  lib.rs
simploxide-sxcrt-sys/tests/: smoke.rs
simploxide-ws-core/: Cargo.toml  README.md
simploxide-ws-core/docs/: normal_operation.d2  overview.d2
simploxide-ws-core/src/: cli.rs  dispatcher.rs  lib.rs  router.rs  transmission.rs
simploxide/src/: lib.rs
