[package]
name = "simploxide-bindgen"
version = "0.2.0"
authors = ["a1akris <alkrivitskiy@pm.me>"]
edition = "2024"
license = "MIT OR Apache-2.0"
exclude = ["generated", "simplex-chat"]

description = "SimpleX-Chat API types and client generator"
readme = "README.md"
repository = "https://github.com/a1akris/simploxide"
documentation = "https://docs.rs/simploxide-bindgen"
categories = ["development-tools", "api-bindings", "data-structures"]
keywords = ["simplex", "chat", "bindgen", "types", "codegen"]

[dependencies]
convert_case = "0.9.0"

[dev-dependencies]
expect-test = "1.5.1"
