[package]
name = "simploxide-client"
version = "0.10.0"
authors = ["a1akris <alkrivitskiy@pm.me>"]
edition = "2024"
license = "MIT OR Apache-2.0"
exclude = ["screenshots", "sxcrt", "test_db"]

description = "SimpleX-Chat API client"
readme = "README.md"
repository = "https://github.com/a1akris/simploxide"
documentation = "https://docs.rs/simploxide-client"
categories = ["network-programming", "asynchronous", "web-programming::websocket"]
keywords = ["simplex-chat", "websocket", "ffi", "client"]

[features]
default = ["cli"]
bon = ["simploxide-api-types/bon"]
ffi = ["dep:simploxide-ffi-core"]
websocket = ["dep:simploxide-ws-core"]
cli = ["websocket", "simploxide-ws-core/cli"]
crypto = ["dep:zeroize", "dep:rand"]
native_crypto = ["crypto", "dep:salsa20", "dep:poly1305", "dep:subtle"]
cancellation = ["dep:tokio-util"]
multimedia = ["dep:image"]
fullcli = ["cli", "bon", "native_crypto", "cancellation", "multimedia"]
fullffi = ["ffi", "bon", "native_crypto", "cancellation", "multimedia"]

[dependencies]
futures.workspace = true
log.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["fs"] }

simploxide-ws-core = { version = "0.1.0", path = "../simploxide-ws-core", optional = true }
simploxide-ffi-core = { version = "0.1.0", path = "../simploxide-ffi-core", optional = true }
simploxide-api-types = { version = "0.8.0", path = "../simploxide-api-types" }

base64 = "0.22"
poly1305 = { version = "0.8.0", features = ["zeroize"], optional = true }
rand = { version = "0.10", optional = true }
salsa20 = { version = "0.11.0", features = ["zeroize"], optional = true }
subtle = { version = "2", optional = true }
zeroize = { version = "1", features = ["derive"], optional = true }
tokio-util = { version = "0.7", optional = true }
image = { version = "0.25", default-features = false, features = ["default-formats"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
async-trait = "0.1.89"
