[package]
name = "simploxide-client"
version = "0.12.0"
authors = ["a1akris <alkrivitskiy@pm.me>"]
edition = "2024"
license = "MIT OR Apache-2.0 OR AGPL-3.0"
exclude = ["screenshots", "sxcrt", "test_db"]

description = "SimpleX-Chat API client"
readme = "README.md"
repository = "https://github.com/a1akris/simploxide"
documentation = "https://docs.rs/simploxide-client"
categories = ["network-programming", "asynchronous"]
keywords = ["simplex-chat", "websocket", "ffi", "client"]

[package.metadata.docs.rs]
features = ["cli", "ffi", "native_crypto", "cancellation", "multimedia", "xftp", "farm"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["cli"]
bon = ["simploxide-api-types/bon"]
cancellation = ["dep:tokio-util"]
cli = ["websocket", "simploxide-ws-core/cli"]
crypto = ["dep:zeroize", "dep:rand"]
farm = ["dep:dashmap", "dep:rustc-hash"]
ffi = ["dep:simploxide-ffi-core"]
fullcli = ["cli", "native_crypto", "cancellation", "multimedia", "xftp", "farm"]
fullffi = ["ffi", "native_crypto", "cancellation", "multimedia", "xftp", "farm"]
multimedia = ["dep:image"]
native_crypto = ["crypto", "dep:salsa20", "dep:poly1305", "dep:subtle"]
websocket = ["dep:simploxide-ws-core"]
xftp = ["dep:dashmap", "dep:rustc-hash"]

[dependencies]
futures = { workspace = true, features = ["alloc"] }
log.workspace = true
serde-aux.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }

simploxide-core = { version = "0.5.0", path = "../simploxide-core" }
simploxide-ws-core = { version = "0.2.0", path = "../simploxide-ws-core", optional = true }
simploxide-ffi-core = { version = "0.2.0", path = "../simploxide-ffi-core", optional = true }
simploxide-api-types = { version = "0.9.1", path = "../simploxide-api-types" }

base64 = "0.22"
poly1305 = { version = "0.9", features = ["zeroize"], optional = true }
rand = { version = "0.10", optional = true }
salsa20 = { version = "0.11", features = ["zeroize"], optional = true }
subtle = { version = "2", optional = true }
zeroize = { version = "1", features = ["derive"], optional = true }
tokio-util = { version = "0.7", optional = true }
image = { version = "0.25", default-features = false, features = ["default-formats"], optional = true }
dashmap = { version = "6", optional = true }
rustc-hash = { version = "2", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
async-trait = "0.1.89"
