[package]
name = "simploxide-core"
version = "0.7.0"
edition = "2024"
authors = ["a1akris <alkrivitskiy@pm.me>"]
license = "MIT OR Apache-2.0"

description = "SimplOxide shared types and helpers"
readme = "README.md"
repository = "https://github.com/a1akris/simploxide"
documentation = "https://docs.rs/simploxide-core"
keywords = ["simplex-chat"]

[dependencies]
serde.workspace = true
