[package]
name = "simploxide"
version = "0.2.0"
authors = ["a1akris <alkrivitskiy@pm.me>"]
edition = "2024"
license = "MIT OR Apache-2.0"

description = "SimpleX-Chat bot SDK"
readme = "README.md"
repository = "https://github.com/a1akris/simploxide"
documentation = "https://docs.rs/simploxide"
categories = ["network-programming", "asynchronous", "web-programming::websocket"]
keywords = ["simplex", "chat", "bot", "sdk", "framework"]

[dependencies]
